fix #62125 no wrap and scroll for source code examples (#444)

--- a/styles/theme-base.css
+++ b/styles/theme-base.css
@@ -1313,6 +1313,8 @@ div.tip p:first-child {
 }
 .docs .example-contents pre {
     margin:0;
+    overflow-x:auto;
+    white-space:pre;
 }
 .docs .example-contents > [class$="code"],
 .docs .example-contents.screen,
